OGC API Records service - /collections/{collectionId}/items and /collections/{collectionId}/items/{recordId} services
