# modules/services/ogc-api-records/openapi.yaml
@@ -204,6 +204,125 @@ paths:
             text/html:
               schema:
                 type: string
+  '/collections/{collectionId}/items':
+    get:
+      tags:
+        - Record
+    parameters:
+      - name: collectionId
+        in: path
+        description: Identifier (name) of a specific collection
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: bbox
+        in: query
+        description: |
+          Only collections that have a geometry that intersects the bounding box are selected. The bounding box is provided as four or six numbers, depending on whether the coordinate reference system includes a vertical axis (elevation or depth):
+          * Lower left corner, coordinate axis 1 * Lower left corner, coordinate axis 2 * Lower left corner, coordinate axis 3 (optional) * Upper right corner, coordinate axis 1 * Upper right corner, coordinate axis 2 * Upper right corner, coordinate axis 3 (optional)
+          The coordinate reference system of the values is WGS84 longitude/latitude (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different coordinate reference system is specified in the parameter `bbox-crs`.
+          For WGS84 longitude/latitude the values are in most cases the sequence of minimum longitude, minimum latitude, maximum longitude and maximum latitude. However, in cases where the box spans the antimeridian the first value (west-most box edge) is larger than the third value (east-most box edge).
+          If a collection has multiple spatial geometry properties, it is the decision of the server whether only a single spatial geometry property is used to determine the extent or all relevant geometries.
+        required: false
+        style: form
+        explode: false
+        schema:
+          maxItems: 6
+          minItems: 4
+          type: array
+          items:
+            type: number
+      - name: datetime
+        in: query
+        required: false
+        schema:
+          type: string
+        style: form
+        explode: false
+      - name: limit
+        in: query
+        description: |
+          The optional limit parameter limits the number of items that are
+          presented in the response document.
+
+          Only items are counted that are on the first level of the collection in
+          the response document. Nested objects contained within the explicitly
+          requested items shall not be counted.
+
+          * Minimum = 1
+          * Maximum = 10000
+          * Default = 10
+        required: false
+        style: form
+        explode: false
+        schema:
+          maximum: 10000
+          minimum: 1
+          type: integer
+          default: 10
+      - name: startindex
+        in: query
+        description: |
+          The optional startindex parameter contains the index of the first document from the results
+          presented in the response document.
+
+          Only items are counted that are on the first level of the collection in
+          the response document. Nested objects contained within the explicitly
+          requested items shall not be counted.
+
+          * Minimum = 0
+          * Maximum = 9999
+          * Default = 0
+        required: false
+        style: form
+        explode: false
+        schema:
+          maximum: 9999
+          minimum: 0
+          type: integer
+          default: 9
+      - name: type
+        in: query
+        required: false
+        schema:
+          type: string
+        style: form
+        explode: false
+      - name: q
+        in: query
+        required: false
+        schema:
+          type: array
+          minItems: 1
+          maxItems: 10
+          items:
+            type: string
+        style: spaceDelimited
+        explode: false
+      - name: externalids
+        in: query
+        required: false
+        schema:
+          type: array
+          minItems: 1
+          maxItems: 10
+          items:
+            type: string
+        style: form
+        explode: false
+      - name: sortby
+        in: query
+        required: false
+        schema:
+          type: array
+          minItems: 1
+          items:
+            type: string
+            #pattern: [A-Za-z_][A-Za-z_0-9]*[:]?([Aa][Ss][Cc]|[Dd][Ee][Ss][Cc])?
+        style: form
+        explode: false
   '/collections/{collectionId}/items/{recordId}':
     get:
       tags:
